# engram

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  SEARCH-RESEARCH.md  web
.github/workflows/: ci.yml
.grotto/: config.toml  events.jsonl  summary.md  tasks.md
.grotto/agents/agent-1/: status.json
.grotto/agents/agent-2/: status.json
.grotto/agents/agent-3/: status.json
.grotto/agents/agent-4/: status.json
crates/conch-cli/: Cargo.toml
crates/conch-cli/src/: main.rs
crates/conch-core/: Cargo.toml
crates/conch-core/src/: consolidate.rs  decay.rs  embed.rs  importance.rs  isomorphic.rs  lib.rs  memory.rs  recall.rs  recall_scoring.rs  relate.rs  store.rs  temporal.rs  validate.rs
crates/conch-core/tests/: reliability.rs
crates/conch-mcp/: Cargo.toml
crates/conch-mcp/src/: main.rs
customer-app/: .env.example  README.md
customer-app/app/: page.tsx
customer-app/app/api/reliability-leads/: route.ts
customer-app/supabase/migrations/: 20260223203933_create_reliability_leads.sql
dashboard/: package-lock.json  package.json
dashboard/app/: globals.css  layout.tsx  page.tsx
dashboard/app/api/action-log/: route.ts
dashboard/app/api/daily-rollup/: route.ts
dashboard/app/api/memories/: route.ts
dashboard/app/api/namespaces/: route.ts
dashboard/app/api/recall/: route.ts
dashboard/app/api/recall-compare/: route.ts
dashboard/app/api/recall-export/: route.ts
dashboard/app/api/recall-snapshot/: route.ts
dashboard/app/api/system-stats/: route.ts
docs/: customer-app-deploy.md  market-landscape-2026-02.md  testing.md
scripts/: benchmark-mcp-concurrency.sh  import-memories.sh  migrate-memory-md.sh
skill/: SKILL.md
