[package]
name = "conch"
version = "0.2.0"
edition = "2021"
description = "CLI for conch — biological memory for AI agents"
license = "MIT"
repository = "https://github.com/jlgrimes/conch"
homepage = "https://github.com/jlgrimes/conch"
readme = "../../README.md"
authors = ["Jared Grimes"]
keywords = ["memory", "ai-agent", "cli", "biological-memory"]
categories = ["command-line-utilities"]

[[bin]]
name = "conch"
path = "src/main.rs"

[dependencies]
conch-core = { version = "0.2.0", path = "../conch-core" }
clap = { version = "4", features = ["derive"] }
serde_json = "1"
