[package]
name = "conch-core"
version = "0.2.0"
edition = "2021"
description = "Biological memory engine for AI agents — memories strengthen with use, fade with time"
license = "MIT"
repository = "https://github.com/jlgrimes/conch"
homepage = "https://github.com/jlgrimes/conch"
readme = "../../README.md"
authors = ["Jared Grimes"]
keywords = ["memory", "ai-agent", "semantic-search", "biological-memory", "sqlite"]
categories = ["database", "science"]

[dependencies]
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
fastembed = "5"
thiserror = "2"
bm25 = "2"
sha2 = "0.10"
ureq = { version = "2", features = ["json"] }
chrono-tz = "0.10"

[dev-dependencies]
rusqlite = { version = "0.31", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
